js/js.translator/testData/incremental/invalidation/makeOpenMethodFinal/main/m.1.kt
fun box(stepId: Int, isWasm: Boolean): String {
    val actual = use(Foo())
    return if (actual == 42) "OK" else "Fail: $actual"
}

